resume font size and spacing fix

--- a/src/styl/_resume.styl
+++ b/src/styl/_resume.styl
@@ -43,6 +43,9 @@
     left 20%
     margin-right 0
     width 60%
+    font-size 100%
+    @media print
+      font-size 90%
 
   code
     font-size 90%
@@ -90,12 +93,6 @@
     line-height 1em
     position relative
     left 20%
-
-  h1 + p
-    /*subtitle*/
-    font-size: 110%
-    @media print
-      font-size 100%
 
   h2
     font-size 1.1em
